<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.learningjava.SignUpActivity"
    android:background="@drawable/space" >

     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher1" />
     

    <EditText
        android:id="@+id/fname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:gravity="start|center"
        android:hint="@string/entrfn"
        android:textColor="@color/white"
        android:textSize="15dp" 
        android:inputType="textCapWords"
        >
        <requestFocus />
    </EditText>
    
     <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/ln"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:gravity="start|center"
        android:hint="@string/entrln"
        android:textColor="@color/white"
        android:inputType="textCapWords"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/stdn"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/stdn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lname"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/entrstd"
        android:inputType="textPhonetic"
        android:textColor="@color/white"
        android:textSize="15dp" />

   <Button
        android:id="@+id/bktologin"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/btl"
        android:textColor="@color/white"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/passw"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/stdn"
        android:layout_centerVertical="true"
        android:gravity="start|center"
        android:text="@string/pass"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <Button
        android:id="@+id/register"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bktologin"
        android:layout_below="@+id/pword"
        android:layout_marginTop="19dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="24dp"
        android:gravity="start|center"
        android:text="@string/fn"
        android:textColor="@color/white"
        android:textSize="15dp" />

</RelativeLayout>
